--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name"></string>
+    <string name="app_name">Já Chegou</string>
 
     <!-- Strings related to login -->
     <string name="ja_chegou">Já Chegou !!!</string>
